--- a/LifeSave/nbproject/project.properties
+++ b/LifeSave/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LifeSave
-main.class=
+main.class=LifeSave.UI.LoginPage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
