--- a/LifeSave/nbproject/project.properties
+++ b/LifeSave/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.mysql-connector-java-8.0.25.jar=/Users/parthkalani/Downloads/mysq
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.25.jar}
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LifeSave
-main.class=
+main.class=LifeSave.UI.login_page
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
